# interpretability-clin-trials

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
clt/: config.py  loader.py  model.py  train.py
docs/: pipeline_lessons.md
graphs/: build.py  export.py  prune.py
interventions/: patch.py
notebooks/: 01_training_diagnostics.ipynb  02_feature_exploration.ipynb  03_attribution_graphs.ipynb
prompts/: __init__.py  adverse_events.py  eligibility.py  endpoints.py  trial_prompts.json
scripts/: apply_labels.py  collect_graph_features.py  compute_clt_scales.py  extract_activations.py  find_top_activations.py  inspect_corpus.py  label_features.py  pre_terminate.sh  run_graph.py  run_graphs_batch.py  run_pipeline.sh  run_pipeline_medgemma.sh  setup_lambda.sh  setup_lambda_medgemma.sh  train_clt.py
tests/: test_attribution.py  test_clt_toy.py  test_export.py
viz/: features.py  graphs.py
